# pypack_sibal

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_ko.md  Dockerfile  README.md  README_ko.md  SECURITY.md  SECURITY_ko.md  generate_siren.py  pyproject.toml  test_emergency.py
.github/workflows/: docker-publish.yml
src/sibal/: __init__.py
