[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sibal"
version = "1.0.0"
description = "A package that turns Python errors into a state of emergency with rainbow terminal madness and siren sounds."
authors = [
    {name = "Rheehose", email = "rheehose@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rheehose/pypack_sibal"

[tool.setuptools.packages.find]
where = ["src"]
